fix: spacing bugs in top half of page

--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
+    background-color: #1f2937;
     font-size: 24px;
     align-items: center;
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
 }
 
@@ -47,10 +48,11 @@ ul {
 .block-one {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 40px;
     padding: 75px 200px;
     background-color: #1f2937;
+    min-width: 800px;
 }
 
 .title {
@@ -179,7 +181,6 @@ h2 {
     padding: 50px 100px;
     justify-content: space-between;
     gap: 30px;
-    max-width: 1000px;
 }
 
 .prompt-text {
